
= rufus-rtm CHANGELOG.txt


== rufus-rtm - 0.1.3    not yet released

- ruby 1.9.x friendly
- removed evil "require 'rubygems'" from rufus/rtm/base.rb
- can now pass rtm key and secret via method params (Giorgio's request)


== rufus-rtm - 0.1    released 2008/02/14

- initial release
